# irobot-localization

./: .gitignore
src/create_fundamentals/: laser.launch  laser_config.yaml  package.xml
src/create_fundamentals/src/: driver.py
src/create_fundamentals/src/irobot/: __init__.py  create.py
src/plastic_fundamentals/: CMakeLists.txt  challenge.launch  gold.txt  localization.launch  mcl_localization.launch  moving.launch  package.xml  pickup.txt  publish_map.py  smooth.launch
src/plastic_fundamentals/msg/: AbsEncoder.msg  Point.msg  Pose.msg
src/plastic_fundamentals/src/: SpinInPlace.cpp  align.cpp  align2.cpp  align3.cpp  align4.cpp  align5.cpp  align_improved.cpp  calibrate.cpp  center.cpp  challenge_dry.cpp  current_mcl.cpp  example_laser.cpp  example_laser.py  example_moving.py  example_song.py  executePlanSmoothly.cpp  execute_plan_server.cpp  execute_smooth_plan_server.cpp  graph_utils.cpp  graph_utils.hpp  map.txt  marker_relay.cpp  marker_test.cpp  mcl.cpp  mcl_localization.cpp  mcl_plan.cpp  mcl_updated.cpp  mcl_wanderer.cpp  move.cpp  move_simulation.cpp  move_to_position.cpp  play_guile.cpp  publish_map.py  simulator.cpp  square_no_sensors.cpp  square_no_sensors_geom.cpp  square_with_encoders.cpp  square_with_encoders_controller.cpp  square_with_encoders_pid.cpp  wanderer.cpp  (+1 more)
src/plastic_fundamentals/srv/: ExecutePlan.srv  Move.srv  PublishMarker.srv
